# haskell_learning

./: .gitignore  LICENSE  README.md  learning.cabal  run.sh  stack.yaml  todo.org
app/: #ParseCsvMain.hs#  Main.hs  ParseCsvMain.hs  ParseDividendsMain.hs
src/: AltLib.hs  Lib.hs  ParseCsv.hs  ParseDividends.hs  QuandlLookup.hs  Utils.hs
src/Hl/Csv/: Account.hs  AccountSummary.hs  Dividend.hs  Model.hs  Transaction.hs
test/: AesonSpec.hs  LibSpec.hs  ParseCsvSpec.hs  QuandlLookupSpec.hs  Spec.hs  TestUtils.hs
test/Hl/Csv/: AccountSummarySpec.hs  DividendSpec.hs  ModelSpec.hs  TransactionSpec.hs
