name:                learning
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/torrlane/learning#readme
license:             BSD3
license-file:        LICENSE
author:              torrlane
maintainer:          value
copyright:           SET_COPYRIGHT
category:            SET_CATEGORY
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib,QuandlLookup,ParseCsv,Utils, Hl.Csv.AccountSummary
  build-depends:       base >= 4.7 && < 5
                     , time 
                     , wreq
                     , lens
                     , lens-aeson
                     , bytestring
                     , text
                     , aeson
                     , containers
                     , unordered-containers
                     , vector
                     , split
                     , cassava
                     , either
  default-language:    Haskell2010

executable learning-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cassava
                     , learning
  default-language:    Haskell2010

executable parse-csv-exe
  hs-source-dirs:      app
  main-is:             ParseCsvMain.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is ParseCsvMain
  build-depends:       base
                     , directory
                     , filepath
                     , cassava
                     , containers
                     , learning
  default-language:    Haskell2010

test-suite learning-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aeson
                     , text
                     , time
                     , cassava
                     , either
                     , bytestring
                     , test-framework
                     , test-framework-hunit
                     , HUnit
                     , containers
                     , learning
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/torrlane/learning
